# drf-messages

./: .gitignore  .pylintrc  MANIFEST.in  README.rst  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml  django.yml  publish-to-test-pypi.yml  pylint.yml
docs/source/: conf.py  index.rst
docs/source/installation/: installation.rst  quick_start.rst
docs/source/reference/: change_log.rst  models.rst  settings_reference.rst  storage.rst
docs/source/usage/: get_messages.rst  views.rst
drf_messages/: __init__.py  admin.py  apps.py  conf.py  filters.py  middleware.py  models.py  serializers.py  storage.py  urls.py  views.py
drf_messages/migrations/: 0001_initial.py  0002_message_session_key.py
testproj/: description.md  manage.py  requirements-github.txt  requirements.txt
testproj/demo/: factories.py  tests.py  urls.py  user_factories.py  views.py
testproj/demo/templates/demo/: index.html
testproj/testproj/: settings.py  urls.py
